Updated version - Data Characterization, Code Refactoring, etc.

--- a/config.ini
+++ b/config.ini
@@ -1,38 +1,40 @@
 [main-config]
 city = Bonn
-time_start = 2021-07-25
-time_end = 2021-08-10
+time_start = 2021-12-01
+time_end = 2023-12-31
 time_interval = 10
 bb = 7.064593,7.177889,50.681209,50.772488
 path_mode = opath
 
 [Sources]
-traffic_here = None
-traffic_od = None
-incident_bing = None
-incident_here = None
-construction_od = None
-envirocar = None
-adac = None
-weather = None
+traffic_here = true
+traffic_od = true
+incident_bing = true
+incident_here = true
+construction_od = true
+envirocar = true
+adac = true
+weather = true
 
 [Data-Config]
-cnt_traffic_here = 87
-cnt_traffic_od = 111
-cnt_incident_here = 32954
-cnt_incident_bing = 79742
-cnt_construction_od = 64773
-cnt_envirocar = 7056
-cnt_adac = 23009
+cnt_traffic_here = 86
+cnt_traffic_od = 110
+cnt_incident_here = 8
+cnt_incident_bing = 36
+cnt_construction_od = 22
+cnt_envirocar = 2857
+cnt_adac = 28026
+cnt_weather = 168
 
 [Timestamp-Config]
 envirocar = time
-incident_bing = incidentLastModified
+incident_bing = incident_last_modified
 incident_here = Timestamp
 traffic_here = createdTimestamp
 construction_od = Time
 traffic_od = Time
 adac = Timestamp
+weather = time
 
 [GPS-Config]
 incident_bing = None
